--- a/PeopleSearch.Tests/PeopleSearch.Tests.csproj
+++ b/PeopleSearch.Tests/PeopleSearch.Tests.csproj
@@ -33,6 +33,13 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.dll</HintPath>
+    </Reference>
+    <Reference Include="EntityFramework.SqlServer">
+      <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.SqlServer.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="Microsoft.VisualStudio.QualityTools.UnitTestFramework, Version=10.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL" />
     <Reference Include="System" />
@@ -82,11 +89,22 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Constants\Constants.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Controllers\PersonControllerTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="App.config" />
+    <Content Include="Resources\Images\Albert_Einstein.jpg" />
+    <Content Include="Resources\Images\Benjamin_Franklin.jpg" />
+    <Content Include="Resources\Images\Compton_Tucker.jpg" />
+    <Content Include="Resources\Images\Marie_Curie.jpg" />
+    <Content Include="Resources\Images\Raymond_Davis.jpg" />
+    <Content Include="Resources\Images\Rosalind_Franklin.jpg" />
+    <Content Include="Resources\Images\spinner.gif" />
+    <Content Include="Resources\Images\Stephen_Hawking.jpg" />
+    <Content Include="Resources\Images\Vint_Cerf.jpg" />
+    <Content Include="Resources\SeedData\Persons.xml" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
