--- a/PeopleSearch/Web.config
+++ b/PeopleSearch/Web.config
@@ -96,7 +96,7 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <!--<add name="PersonContext" connectionString="Data Source=LENOVO-PC\SQLEXPRESS;Database=person;Integrated Security=True" providerName="System.Data.SqlClient" />-->
+    <add name="PersonContext" connectionString="Data Source=LE\SQLEXPRESS;Database=person;Integrated Security=True" providerName="System.Data.SqlClient" />
     <add name="TestContext" connectionString="Data Source=(localdb)\MSSQLLocalDB; Initial Catalog=TestContext-20161014174022; Integrated Security=True; MultipleActiveResultSets=True; AttachDbFilename=|DataDirectory|TestContext-20161014174022.mdf" providerName="System.Data.SqlClient"/>
   </connectionStrings>
   <system.codedom>
