--- a/PeopleSearch.Tests/PeopleSearch.Tests.csproj
+++ b/PeopleSearch.Tests/PeopleSearch.Tests.csproj
@@ -123,6 +123,9 @@
       <Name>PeopleSearch</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="NewFolder1\" />
+  </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it.
        Other similar extension points exist, see Microsoft.Common.targets.
