--- a/PeopleSearch.Tests/PeopleSearch.Tests.csproj
+++ b/PeopleSearch.Tests/PeopleSearch.Tests.csproj
@@ -59,6 +59,7 @@
     <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Data" />
+    <Reference Include="System.Drawing" />
     <Reference Include="System.Web" />
     <Reference Include="System.Web.ApplicationServices" />
     <Reference Include="System.Web.Extensions" />
@@ -109,15 +110,6 @@
   <ItemGroup>
     <Content Include="App.config" />
     <Content Include="Resources\Images\Albert_Einstein.jpg" />
-    <Content Include="Resources\Images\Benjamin_Franklin.jpg" />
-    <Content Include="Resources\Images\Compton_Tucker.jpg" />
-    <Content Include="Resources\Images\Marie_Curie.jpg" />
-    <Content Include="Resources\Images\Raymond_Davis.jpg" />
-    <Content Include="Resources\Images\Rosalind_Franklin.jpg" />
-    <Content Include="Resources\Images\spinner.gif" />
-    <Content Include="Resources\Images\Stephen_Hawking.jpg" />
-    <Content Include="Resources\Images\Vint_Cerf.jpg" />
-    <Content Include="Resources\SeedData\Persons.xml" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
